--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.App {
+  display: flex;
+  justify-content: space-around;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #B9F8D3;
+}
+.block {
+  padding: 20px;
+  background-color: #40DFEF;
+}
+img {
+  width: 400px;
+  height: 320px;
+}
+.cartIcon {
+  width: 35px;
+  height: 35px;
+  color: #E78EA9;
+}
+.categoryButtonSelected {
+  background-color: #40DFEF;
+}
+.categoryButton :hover {
+  background-color: #40DFEF;
+}
+.categoryButton {
+  cursor: pointer;
+  margin: 5px;
+  padding: 5px;
+}
+.icon {
+  width: 20px;
 }
